--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,6 +54,7 @@
 	border-radius: 4px;
 	background: #006FCD;
 	color: #FFFFFF;
+	border:2px solid #006FCD;
 }
 
 
@@ -191,11 +192,151 @@
 	align-items: center;
 	background: #fff;
 	border:none;
+	&__text {
+		color: #4B596D;
+		font-family: 'Rajdhani', sans-serif;
+		font-size: 16px;
+		line-height: 20px;
+	}
 	
 	&__img1 {
+		width: 22px;
+		height: 19px;
+		margin-left: 10px;
+	}
+
+	&__img2 {
 		width: 50px;
 		height: 30px;
 		margin-left: 10px;
+		display: none;
 	}
 }
 
+
+.start:hover .start__text{
+	border-bottom: 1px solid #649CD3;
+}
+
+.start:hover .start__img1{
+	display: none;
+}
+
+.start:hover .start__img2{
+	display: block;
+}
+
+.start:disabled {
+	background: red;
+}
+
+.yesterday {
+	background: #7C4DFF;
+	border-radius: 4px;	
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 8px 20px;
+
+	&__paragraph {
+		font-family: 'Yrsa', serif;
+		font-weight: 600;
+		font-size: 18px;
+		line-height: 32px;
+		letter-spacing: 1px;
+		color: #FFFFFF;
+
+	}
+
+	&__img {
+		width: 28px;
+		height: 28px;
+		margin-left: auto;
+	}
+}
+
+.yesterday:hover {
+	background: #34005c;
+}
+
+.yesterday:active {
+	background: #bf6bff;
+}
+.conteiner-block--flex {
+	display: flex;
+}
+
+/*можно ли было как-то растнуть стрелочку не прибегая к dispay none?*/
+
+.AppStore {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-right: 20px;
+	background: #333333;
+	border-radius: 4px;
+	border: none;
+	padding: 0px 13px;
+
+	&__paragraph {
+		margin-left: 10px;
+		text-align: left;
+		letter-spacing: 0.25px;
+		color: #FFFFFF;
+		font-size: 14px;
+		line-height: 14px;
+		font-family: 'Yrsa', serif;
+
+		&-big {
+			font-size: 18px;
+			letter-spacing: -0.25px;
+			font-weight: 600;
+		}
+	}
+
+	&__img {
+		width: 23px;
+		height: 28px;
+	}
+}
+
+.WebApp {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #333333;
+	border-radius: 4px;
+	border: none;
+	padding: 0px 13px 0px 0px;
+
+
+	&__paragraph {
+		text-align: left;
+		letter-spacing: 0.25px;
+		color: #FFFFFF;
+		font-size: 14px;
+		line-height: 14px;
+		font-family: 'Yrsa', serif;
+
+		&-big {
+			font-size: 18px;
+			letter-spacing: -0.25px;
+			font-weight: 600;
+		}
+	}
+
+	&__img {
+		width: 48px;
+		height: 48px;
+		margin-left: auto;
+	}
+}
+
+.WebApp:hover {
+	background: black;
+}
+
+.AppStore:hover {
+	background: black;
+}
