--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -93,10 +93,11 @@
 	border: none;
 	box-shadow: -2px 8px 10px 2px rgba(0,0,0,0.1);
 	width: 200px;
-	padding: 8px 0;
+	padding: 15px 0;
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: center;
+	position: relative;
 }
 
 
@@ -104,7 +105,7 @@
 	background: #5C5C5C;
 	color: #FFFFFF;
 	box-shadow: none;
-	justify-content: flex-end;
+	justify-content: center;
 
 }
 
@@ -123,6 +124,8 @@
 .arrow {
 	width: 50px;
 	height: 30px;
+	position: absolute;
+	right: 1px;
 }
 
 .people {
