--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 
 .conteiner{
 	margin:30px 20px;
-	width: 100%;
+	width: 60%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -295,6 +295,8 @@
 			font-size: 18px;
 			letter-spacing: -0.25px;
 			font-weight: 600;
+			display: block;
+			margin-top: 3px;
 		}
 	}
 
