--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,9 +109,6 @@
 
 }
 
-.get-started:hover .arrow{
-}
-
 
 .get-started:active  {
 	background: #ADADAD;
@@ -139,22 +136,32 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: #7C4DFF;
-	letter-spacing: -0.25px;
-	font-size: 16px;
-	line-height: 22px;
-	font-weight: 600;
-	background:#fff;
 	border: none;
+	background:#fff;
 	border-radius: 999px;
 	box-shadow: -2px 5px 7px 2px rgba(0,0,0,0.2);
 	padding: 0px 10px;
+
+	&-text {
+		color: #7C4DFF;
+		letter-spacing: -0.25px;
+		font-size: 16px;
+		line-height: 22px;
+		font-weight: 600;
+		margin-right: 10px;
+
+	}
 }
 
-.login:hover {
-	background: #7C4DFF;
+.login:hover .login-text {
 	color: #fff;
+}
+
+
+.login:hover  
+{
 	box-shadow: -2px 5px 7px 2px rgba(0,0,0,0.09);
+	background: #7C4DFF;
 }
 
 .login:hover .people{
