--- a/src/scss/style-input.scss
+++ b/src/scss/style-input.scss
@@ -1,10 +1,14 @@
 @import "reset";
 
+label {
+  display: block;
 
-
+}
 .conteiner {
   width: 80%;
   margin: 50px 9%;
+  display: flex;
+  flex-direction: column;
 }
 
 .form {
@@ -15,6 +19,7 @@
     position: relative;
     background: white;
     margin-bottom: 50px;
+    width: 250px;
   }
 
   &-caption {
@@ -22,6 +27,7 @@
     font-size: 16px;
     line-height: 26px;
     color: #5d5d5d;
+    display: block;
   }
 
   &-password {
@@ -31,17 +37,25 @@
     background: #fdfdfd;
     border-radius: 5px;
     border: 1px solid #dcdcdc;
+    display: block;
 
     &:focus {
-      border: 1px solid red;
-      background-image: url("../img/novalid.png");
+      border: 1px solid  #ff8300;
       background-position: 95% center;
       background-repeat: no-repeat;
     }
 
+    &:invalid:not(:focus):not(:placeholder-shown) {
+      border: 1px solid red;
+      background-image: url("../img/error.svg");
+      background-position: 95% center;
+      background-repeat: no-repeat;
+    }
+
+
     &:valid:not(:placeholder-shown) {
       border: 1px solid #ff8300;
-      background-image: url("../img/valid.png");
+      background-image: url("../img/valid.svg");
       background-position: 95% center;
       background-repeat: no-repeat;
     }
@@ -54,7 +68,7 @@
 
     &:focus {
       & ~ .requirements {
-        display: block;
+        display: none;
       }
     }
   }
@@ -130,23 +144,6 @@
     z-index: 1;
   }
 
-  &-heit {
-    position: absolute;
-    right: 4%;
-    top: 30%;
-    width: 30px;
-    height: 30px;
-    z-index: 10;
-  }
-
-  &-circle {
-    position: absolute;
-    right: 4%;
-    top: 30%;
-    width: 30px;
-    height: 30px;
-    z-index: 11;
-  }
 
   .requirements {
     position: absolute;
@@ -206,6 +203,7 @@
   }
 
   &-categories {
+    display: block;
     background: #fdfdfd;
     border: 1px solid #dcdcdc;
     box-sizing: border-box;
@@ -232,11 +230,18 @@
     border-radius: 5px;
     border: 3px solid #dcdcdc;
   }
+
+}
+
+
+
+.selects {
+  display: inline-block;
 }
 
 .select1 {
-  margin-bottom: 50px;
-  &-caption {
+    margin-bottom: 50px;
+    &-caption {
     font-size: 16px;
     line-height: 26px;
     color: #4b596d;
@@ -244,6 +249,7 @@
   }
 
   &-categories {
+    display: block;
     margin-top: 10px;
     background: #dee8f1;
     border: none;
