--- a/src/scss/style-input.scss
+++ b/src/scss/style-input.scss
@@ -2,8 +2,8 @@
 
 label {
   display: block;
-
 }
+
 .conteiner {
   width: 80%;
   margin: 50px 9%;
@@ -15,14 +15,14 @@ label {
   position: relative;
   display: inline-block;
 
-  &-section {
+  &__section {
     position: relative;
     background: white;
     margin-bottom: 50px;
     width: 250px;
   }
 
-  &-caption {
+  &__caption {
     font-family: "Nunito", sans-serif;
     font-size: 16px;
     line-height: 26px;
@@ -30,7 +30,7 @@ label {
     display: block;
   }
 
-  &-password {
+  &__password {
     padding-left: 11px;
     height: 45px;
     width: 205px;
@@ -40,7 +40,7 @@ label {
     display: block;
 
     &:focus {
-      border: 1px solid  #ff8300;
+      border: 1px solid #ff8300;
       background-position: 95% center;
       background-repeat: no-repeat;
     }
@@ -51,7 +51,6 @@ label {
       background-position: 95% center;
       background-repeat: no-repeat;
     }
-
 
     &:valid:not(:placeholder-shown) {
       border: 1px solid #ff8300;
@@ -73,7 +72,7 @@ label {
     }
   }
 
-  &-label {
+  &__label {
     opacity: 0.3;
     font-weight: bold;
     position: absolute;
@@ -82,10 +81,10 @@ label {
     transition: 0.4s;
   }
 
-  &-email {
+  &__email {
     width: 100%;
     border: 0;
-    padding: 20px ;
+    padding: 20px;
     background: #fff;
     border: 1px solid #005faf;
     box-sizing: border-box;
@@ -93,9 +92,9 @@ label {
 
     &:focus {
       border: 2px solid #34d2d2;
-      padding: 19px ;
+      padding: 19px;
 
-      & + .form-label {
+      & + .form__label {
         top: 20%;
         left: 20px;
         font-size: 10px;
@@ -104,7 +103,7 @@ label {
 
     &:valid {
       border: 2px solid #34d2d2;
-      padding: 19px ;
+      padding: 19px;
 
       & + .form-label {
         opacity: 0;
@@ -143,7 +142,6 @@ label {
     height: 30px;
     z-index: 1;
   }
-
 
   .requirements {
     position: absolute;
@@ -230,18 +228,15 @@ label {
     border-radius: 5px;
     border: 3px solid #dcdcdc;
   }
-
 }
-
-
 
 .selects {
   display: inline-block;
 }
 
 .select1 {
-    margin-bottom: 50px;
-    &-caption {
+  margin-bottom: 50px;
+  &-caption {
     font-size: 16px;
     line-height: 26px;
     color: #4b596d;
@@ -284,118 +279,9 @@ label {
 /*-----------------------*/
 
 .check {
-  margin-bottom: 50px;
-}
 
-.checkbox {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-
-  &-input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-  }
-
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 50%;
-  }
-
-  &:hover &-input ~ .checkmark {
-    background-color: #ccc;
-  }
-
-  & &-input:checked ~ .checkmark {
-    background: #ff8300;
-  }
-
-  & &-input:checked ~ .checkmark:after {
-    display: block;
-  }
-
-  & .checkmark:after {
-    top: 8px;
-    left: 7.4px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: white;
-    content: "";
-    position: absolute;
-    display: none;
-  }
-}
-
-.checkbox1 {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-
-  &-input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-  .checkmark1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-  }
-
-  &:hover &-input ~ .checkmark1 {
-    background-color: #ccc;
-  }
-
-  & &-input:checked ~ .checkmark1 {
-    background: #ff8300;
-  }
-
-  .checkmark1:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-
-  & &-input:checked ~ .checkmark1:after {
-    display: block;
-  }
-
-  & .checkmark1:after {
-    left: 9px;
-    top: 3px;
-    width: 8px;
-    height: 15px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+  &-conteiner {
+    margin-bottom: 50px;
   }
 }
 
@@ -505,9 +391,135 @@ label {
     background: #649cd3;
   }
 }
+
+
+.checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-family: "Nunito", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 24px;
+  color: black;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  &-input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+
+  &:hover &-input ~ .checkmark {
+    background-color: #ccc;
+  }
+
+  & &-input:checked ~ .checkmark {
+    background: #ff8300;
+  }
+
+  & &-input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+  & .checkmark:after {
+    top: 8px;
+    left: 7.4px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: white;
+    content: "";
+    position: absolute;
+    display: none;
+  }
+}
+
+
+
+
+
+.checkbox1 {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-family: "Nunito", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 24px;
+  color: black;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  &-input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  .checkmark1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+
+  &:hover &-input ~ .checkmark1 {
+    background-color: #ccc;
+  }
+
+  & &-input:checked ~ .checkmark1 {
+    background: #ff8300;
+  }
+
+  .checkmark1:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+
+  & &-input:checked ~ .checkmark1:after {
+    display: block;
+  }
+
+  & .checkmark1:after {
+    left: 9px;
+    top: 3px;
+    width: 8px;
+    height: 15px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
 /*------------------------------------------------*/
-
-
 
 .img {
   display: flex;
@@ -559,8 +571,6 @@ label {
       width: 30px;
       height: 20px;
     }
-
-   
   }
 }
 
@@ -638,7 +648,7 @@ label {
     color: #9b94a3;
     font-family: "Righteous", cursive;
     font-weight: 700;
-    font-size: 20px;  
+    font-size: 20px;
     line-height: 37px;
     letter-spacing: 8px;
   }
@@ -690,19 +700,17 @@ label {
     padding: 0 10%;
     letter-spacing: 8px;
   }
-
 }
 
 .button {
   position: absolute;
-  width:35px;
+  width: 35px;
   height: 30px;
   right: 3%;
-  top:22%;
+  top: 22%;
 }
 
 /*-------------------------------------------------------*/
-
 
 .input-file {
   position: relative;
@@ -725,13 +733,12 @@ label {
     font-weight: 700;
     display: block;
     height: 200px;
-    width:200px;
+    width: 200px;
     z-index: 2;
-    border: 0.5px solid #E2E2E5;
-    border-radius: 5px;  
+    border: 0.5px solid #e2e2e5;
+    border-radius: 5px;
   }
-  
-  
+
   &__circle {
     width: 60px;
     height: 60px;
@@ -748,7 +755,7 @@ label {
     justify-content: center;
     color: #1d24ab;
   }
-  
+
   &__caption {
     color: #ff8300;
     font-family: "Nunito", sans-serif;
@@ -764,4 +771,3 @@ label {
     text-align: center;
   }
 }
-
