--- a/src/scss/style-input.scss
+++ b/src/scss/style-input.scss
@@ -105,7 +105,7 @@ label {
       border: 2px solid #34d2d2;
       padding: 19px;
 
-      & + .form-label {
+      & + .form__label {
         opacity: 0;
       }
     }
@@ -114,7 +114,7 @@ label {
       border: 1px solid #ff6e6e;
       box-sizing: border-box;
       border-radius: 2px;
-      & + .form-label {
+      & + .form__label {
         top: 20%;
         left: 20px;
         font-size: 10px;
@@ -282,6 +282,7 @@ label {
 
   &-conteiner {
     margin-bottom: 50px;
+    width: 30%;
   }
 }
 
@@ -769,5 +770,15 @@ label {
     transform: translate(-50%);
     width: 80%;
     text-align: center;
+  }
+}
+
+
+.forms {
+
+  .conteiner {
+    margin:0;
+    margin-bottom: 50px;
+    width: 100%;
   }
 }
