--- a/src/scss/style-input.scss
+++ b/src/scss/style-input.scss
@@ -614,6 +614,7 @@ label {
   align-items: center;
   position: relative;
   width: 50%;
+  border-radius: 8px;
 
   ::-webkit-input-placeholder {
     color: #7c4dff;
