--- a/src/scss/style-input.scss
+++ b/src/scss/style-input.scss
@@ -316,7 +316,8 @@ label {
 
   &-conteiner {
     margin-bottom: 50px;
-    width: 30%;
+    display: inline-block;
+    margin-right: 50%;
   }
 }
 
